--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "postcss-import": "^15.0.0",
     "postcss-loader": "^4.1.0",
     "prettier": "^2.5.1",
-    "tailwindcss": "^3.1.8",
+    "tailwindcss": "3.1.4",
     "vue-loader": "^15.10.0"
   }
 }
