--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint:prettier": "prettier --check .",
     "lint": "yarn lint:js && yarn lint:prettier",
     "lintfix": "prettier --write --list-different . && yarn lint:js --fix",
-    "storybook": "STORYBOOK=true start-storybook -p 6006",
+    "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
   "dependencies": {
@@ -48,6 +48,7 @@
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-storybook": "^0.6.4",
     "eslint-plugin-vue": "^8.2.0",
+    "nuxt-vite": "^0.3.5",
     "postcss": "^8.4.16",
     "postcss-import": "^15.0.0",
     "postcss-loader": "^4.1.0",
