--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "postcss-import": "^15.0.0",
     "postcss-loader": "^4.1.0",
     "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "3.1.4",
     "vue-loader": "^15.10.0"
   }
