--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "svgo": "svgo -f static/icons -o  static/icons",
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
@@ -54,6 +55,7 @@
     "postcss-loader": "^4.1.0",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
+    "svgo": "^2.8.0",
     "tailwindcss": "3.1.4",
     "vue-loader": "^15.10.0"
   }
